<resources>
    <string name="app_name">CUISINE</string>
    <string name="activity_room_number">Current Room</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="value_any_category">All food</string>
    <string name="value_any_city">Anywhere</string>
    <string name="value_any_price">Any price</string>

    <string name="price_1">$</string>
    <string name="price_2">$$</string>
    <string name="price_3">$$$</string>

    <!--These are for the Welcome Screen Activity -->
    <string name="GREETING_1">Hello, I am CUISINE...</string>
    <string name="GREETING_2">Here to make it easier for you to grab a bite!</string>
    <string name="GREETING_3">And you are?</string>
    <string name="assign_customer_role">seeking a bite!</string>
    <string name="assign_owner_role">serving my customers!</string>

    <!--These are for the Restaurant Details Activity -->
    <string name="reserve_rest_details_activity">Reserve a Table</string>
    <string name="the_word_reserve">RESERVE</string>

    <!--These are for the Reservation Activity -->
    <string name="reserve_table_page">Reservation</string>
    <string name="reserve_edit_page">Edit Reservations</string>
    <string name="how_many_tables">How Many Will Be Dining?</string>
    <string name="reserve_name">Name: </string>
    <string name="current_time">Current Time</string>
    <string name="set_time_text_btn">Pick a Time</string>
    <string name="reserve_phone_number">Phone Number: </string>
    <string name="table_for_one">Party of One</string>
    <string name="table_for_two">Party of Two</string>
    <string name="table_for_three">Party of Three</string>
    <string name="table_for_four">Party of Four</string>
    <string name="table_for_five">Party of Five</string>
    <string name="table_for_six">Party of Six</string>
    <string name="table_for_seven">Party of Seven</string>
    <string name="table_for_eight">Party of Eight</string>
    <string name="large_party">Life is a Party</string>

    <!--Billing Activity on the Owner Size -->
    <string name="billing_activity_banner">Billing</string>
    <string name="billing_activity_submit_bill">Submit</string>
    <string name="billing_activity_beverage_hint">Enter Beverage Costs</string>
    <string name="billing_activity_food_hint">Enter Food Costs</string>
    <string name="billing_activity_refills_hint">Enter Refills Costs</string>
    <string name="billing_activity_amm_food_hint">Enter # of Food Items Ordered</string>
    <string name="billing_activity_amm_bev_hint">Enter # of Beverage Items Ordered</string>
    <string name="billing_activity_amm_refills">Enter # of Refills Ordered</string>
    <string name="billing_activity_tip_hint">Enter Tip Left</string>

    <!--These are for the Reservation Confirmation Activity -->
    <string name="reserve_confirmation">Confirmation</string>
    <string name="reserve_next_steps">We have received your reservation. You will receive a text when your table is ready!</string>
    <string name="reserve_name_confirmation">Thank you, NAME</string>
    <string name="reserve_details">Your Table for NUM will be ready for you soon!</string>
    <string name="to_main_hub">Sweet!</string>

    <!-- Settings Activity Title -->
    <string name="title_activity_settings">Account Details</string>
    <string name="title_activity_title">Settings</string>
    <string name="edit_user_name_text">Change Name</string>
    <string name="change_phone_number_txt">Change Contact Number</string>
    <string name="submit_changes_btn_txt">Submit Changes</string>
    <string name="discard_changes_btn_txt">Discard Changes</string>
    <string name="delete_profile_btn_txt">Delete Profile</string>

    <!-- Preference Titles -->
    <string name="personal_info">Personal Information</string>
    <string name="preferences_info">App Preferences</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your Name:</string>
    <string name="rest_pref">Favorite Restaurant Type:</string>

    <!-- Sync Preferences -->
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_off">Light Mode</string>
    <string name="dark_mode_on">Dark Mode</string>

    <string name="user_type_pref">Account Type</string>
    <string name="user_type_customer">User Type: Customer</string>
    <string name="user_type_owner">User Type: Restaurant</string>

    <string name="label_category">Category</string>
    <string name="label_city">City</string>
    <string name="label_price">Price</string>
    <string name="label_sort_by">Sort By</string>

    <string name="fmt_num_ratings" translatable="false">(%d)</string>
    <string name="all_restaurants">All Restaurants</string>
    <string name="header_filters">Filter</string>
    <string name="search">Search</string>

    <string name="sort_by_rating">Sort by Rating</string>
    <string name="sort_by_popularity">Sort by Popularity</string>
    <string name="sort_by_price">Sort by Price</string>

    <string name="sorted_by_rating">sorted by rating</string>
    <string name="sorted_by_price">sorted by price</string>
    <string name="sorted_by_popularity">sorted by popularity</string>

    <string name="add_random_items">Add Random Items</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_all">Delete All</string>
    <string name="divider_bullet">•</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="message_no_results">Oops, couldn\'t find any results\nthat matched your filter</string>
    <string name="message_no_reviews">Be the first to leave a review!</string>
    <string name="hint_review">How was your experience?</string>
    <string name="submit">Submit</string>
    <string name="filter_add_review">Add review</string>
    <string name="customer_main" />

    <!-- Types of food I could think of in 5 minutes -->
    <string-array name="categories">
        <item>Brunch</item>
        <item>Burgers</item>
        <item>Coffee</item>
        <item>Deli</item>
        <item>Dim Sum</item>
        <item>Indian</item>
        <item>Italian</item>
        <item>Mediterranean</item>
        <item>Mexican</item>
        <item>Pizza</item>
        <item>Ramen</item>
        <item>Sushi</item>
    </string-array>

    <string-array name="user_types">
        <item>Customer</item>
        <item>Owner</item>
    </string-array>


    <!-- 50 most populous cities in the US -->
    <string-array name="cities">
        <item>@string/value_any_city</item>

        <item>Albuquerque</item>
        <item>Arlington</item>
        <item>Atlanta</item>
        <item>Austin</item>
        <item>Baltimore</item>
        <item>Boston</item>
        <item>Charlotte</item>
        <item>Chicago</item>
        <item>Cleveland</item>
        <item>Colorado Springs</item>
        <item>Columbus</item>
        <item>Dallas</item>
        <item>Denver</item>
        <item>Detroit</item>
        <item>El Paso</item>
        <item>Fort Worth</item>
        <item>Fresno</item>
        <item>Houston</item>
        <item>Indianapolis</item>
        <item>Jacksonville</item>
        <item>Kansas City</item>
        <item>Las Vagas</item>
        <item>Long Beach</item>
        <item>Los Angeles</item>
        <item>Louisville</item>
        <item>Memphis</item>
        <item>Mesa</item>
        <item>Miami</item>
        <item>Milwaukee</item>
        <item>Nashville</item>
        <item>New York</item>
        <item>Oakland</item>
        <item>Oklahoma</item>
        <item>Omaha</item>
        <item>Philadelphia</item>
        <item>Phoenix</item>
        <item>Portland</item>
        <item>Raleigh</item>
        <item>Sacramento</item>
        <item>San Antonio</item>
        <item>San Diego</item>
        <item>San Francisco</item>
        <item>San Jose</item>
        <item>Tucson</item>
        <item>Tulsa</item>
        <item>Virginia Beach</item>
        <item>Washington</item>
    </string-array>

    <!-- Price filters -->
    <string-array name="prices">
        <item>@string/value_any_price</item>

        <item>@string/price_1</item>
        <item>@string/price_2</item>
        <item>@string/price_3</item>
    </string-array>

    <!-- Price filters -->
    <string-array name="times">
        <item>0000</item>
        <item>0030</item>
        <item>0100</item>
        <item>0130</item>
        <item>0200</item>
        <item>0230</item>
        <item>0300</item>
        <item>0330</item>
        <item>0400</item>
        <item>0430</item>
        <item>0500</item>
        <item>0530</item>
        <item>0600</item>
        <item>0630</item>
        <item>0700</item>
        <item>0730</item>
        <item>0800</item>
        <item>0830</item>
        <item>0900</item>
        <item>0930</item>
        <item>1000</item>
        <item>1030</item>
        <item>1100</item>
        <item>1130</item>
        <item>1200</item>
        <item>1230</item>
        <item>1300</item>
        <item>1330</item>
        <item>1400</item>
        <item>1430</item>
        <item>1500</item>
        <item>1530</item>
        <item>1600</item>
        <item>1630</item>
        <item>1700</item>
        <item>1730</item>
        <item>1800</item>
        <item>1830</item>
        <item>1900</item>
        <item>1930</item>
        <item>2000</item>
        <item>2030</item>
        <item>2100</item>
        <item>2130</item>
        <item>2200</item>
        <item>2230</item>
        <item>2300</item>
        <item>2330</item>
    </string-array>

    <!-- Ways you can sort restaurants -->
    <string-array name="sort_by">
        <item>@string/sort_by_rating</item>
        <item>@string/sort_by_popularity</item>
        <item>@string/sort_by_price</item>
    </string-array>
    <string name="title_activity_owner">OwnerActivity</string>
    <string name="tab_text_1">Reservations</string>
    <string name="tab_text_2">Requests</string>
    <string name="tab_text_3">Overview</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>