<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activities.ReserveTableActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:fontFamily="@font/gothic_a1"
        android:gravity="clip_horizontal|center"
        android:text="@string/reserve_confirmation"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/set_reservation_table_size_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/reserve_table_page"
            app:srcCompat="@drawable/reservation_confirmation" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">


        <TextView
            android:id="@+id/reservation_for_name_confirm"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="@string/reserve_name_confirmation" />
        <TextView
            android:id="@+id/reservation_details"
            android:layout_width="match_parent"
            android:layout_height="130sp"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="@string/reserve_details" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_reservation"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="@color/purple_200"
            android:textSize="40sp"
            android:text="@string/submit"
            android:textColor="#311B92" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>