<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activities.BillingActivity">

    <LinearLayout
        android:id="@+id/receipt_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/billing_activity_num_bev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@color/white"
                android:hint="@string/billing_activity_amm_bev_hint"
                android:textColorHint="#78909C"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/billing_activity_num_food"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/billing_activity_num_refills"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@color/white"
                android:hint="@string/billing_activity_amm_refills"
                android:textColorHint="#78909C"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/billing_activity_num_bev"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/billing_activity_refills_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@color/white"
                android:hint="@string/billing_activity_refills_hint"
                android:textColorHint="#78909C"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/billing_activity_bev_entry" />

            <EditText
                android:id="@+id/billing_activity_bev_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@color/white"
                android:hint="@string/billing_activity_beverage_hint"
                android:textColorHint="#78909C"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/billing_activity_food_entry" />

            <TextView
                android:id="@+id/billing_activity_banner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/billing_activity_banner"
                android:textColor="@color/white"
                android:textSize="50sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/billing_activity_food_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:hint="@string/billing_activity_food_hint"
                android:textColorHint="#78909C"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/billing_activity_banner" />

            <EditText
                android:id="@+id/billing_activity_num_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@color/white"
                android:hint="@string/billing_activity_amm_food_hint"
                android:textColorHint="#78909C"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/billing_activity_refills_entry"
                tools:ignore="TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_margin="10sp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@+id/receipt_layout"
        tools:layout_editor_absoluteX="0dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/billing_activity_submit_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:background="@color/colorAccent"
            android:layout_weight="1"
            android:text="@string/billing_activity_submit_bill" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>